[gd_scene load_steps=5 format=3 uid="uid://d2kqv0yib7qkx"]

[ext_resource type="Script" path="res://Scripts/Npc.gd" id="1_rc45i"]
[ext_resource type="Texture2D" uid="uid://cansd7eglgsbl" path="res://npc.png" id="2_17s2j"]
[ext_resource type="Texture2D" uid="uid://4bqa3wpaxvxv" path="res://light.jpg" id="3_r24bt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jklbp"]
radius = 605.226

[node name="Npc" type="CharacterBody2D"]
process_mode = 3
scale = Vector2(0.073, 0.073)
script = ExtResource("1_rc45i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_17s2j")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-123.287, 205.479, -136.985, 136.986, -191.78, 123.288, -232.876, 95.8906, -219.178, 82.1919, -260.273, 27.3975, -273.972, -27.3972, -260.273, -68.4932, -232.876, -82.1917, -219.178, -95.8904, -205.479, -123.288, -246.574, -123.288, -273.972, -150.685, -273.972, -178.082, -246.574, -205.479, -232.876, -205.479, -205.479, -205.479, -205.479, -232.877, 109.59, -232.877, 123.288, -205.479, 150.686, -191.781, 178.083, -191.781, 178.083, -150.685, 164.384, -123.288, 136.987, -109.589, 109.59, -123.288, 123.288, -82.1917, 150.686, -68.4932, 178.083, -54.7944, 178.083, 0, 178.083, 41.0959, 164.384, 82.1919, 136.987, 109.589, 123.288, 136.986, 68.4941, 136.986, 54.7949, 136.986, 41.0967, 178.082, 13.6992, 232.877, -27.3965, 260.274, -68.4922, 246.575, -95.8896, 232.877)

[node name="mainlight" type="PointLight2D" parent="."]
position = Vector2(-3, 0)
rotation = 1.51844
shadow_enabled = true
texture = ExtResource("3_r24bt")
texture_scale = 4.4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-27.3973, 0)
shape = SubResource("CircleShape2D_jklbp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 402.0
offset_right = 1127.0
offset_bottom = 621.0
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 372.0
offset_right = 389.0
offset_bottom = 418.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 427.0
offset_right = 6518.0
offset_bottom = 755.0
theme_override_font_sizes/font_size = 30
text = "weqweqeweqweqeqweeqe"

[node name="Name" type="Label" parent="CanvasLayer"]
offset_left = 45.0
offset_top = 374.0
offset_right = 383.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 30

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
